# SkyMetrics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md
scripts/: train_model.py
src/skymetrics/: __init__.py
src/skymetrics/api/: app.py
src/skymetrics/dashboard/: __init__.py  app.py  data.py
src/skymetrics/db/: loaders.py  schema.py
src/skymetrics/llm/: __init__.py  client.py  rag.py  summarize.py
src/skymetrics/ml/: __init__.py  booking.py  importance.py  model_card.py  persistence.py  predict.py
src/skymetrics/nlp/: aspects.py  sentiment.py  topics.py  transformer.py
src/skymetrics/scrapers/: external.py  flights.py  skytrax.py
tests/: test_api.py  test_booking.py  test_dashboard.py  test_db.py  test_external.py  test_flights.py  test_llm.py  test_ml_extras.py  test_nlp_advanced.py  test_predict.py  test_rag.py  test_scrapers.py  test_sentiment.py
